--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <body>
     <div class="container">
         <div class="Mainprompt">
-            <img class="image" src="images/catflower.jpg"></img>
+            <img class="image" src="images/cute.jpg" alt="cat with head on hand">
+            <img class="image" src="images/kirby.jpg" alt="Description of the new image">
+            <img class="image" src="images/notfunny" alt="Description of the new image">
+            <img class="image" src="images/kissy.gif" alt="Description of the new image">
+            <img class="image" src="images/hearts.png" alt="Description of the new image">
             <h1 class="hh" id="name">Hey beautiful!</h1>
             <p class="pp" id="question">Will you be my Valentine?</p>
             <div class="buttons">
