--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <img class="image" src="images/notfunny" alt="Description of the new image">
             <img class="image" src="images/kissy.gif" alt="Description of the new image">
             <img class="image" src="images/hearts.png" alt="Description of the new image">
-            <h1 class="hh" id="name">Hey beautiful!</h1>
-            <p class="pp" id="question">Will you be my Valentine?</p>
+            <h1 class="hh" id="name">Hey handsome lovely pooki dookie bear!</h1>
+            <p class="pp" id="question">You WILL be my Valentine?</p>
             <div class="buttons">
                 <button id="no-button" onclick="showMessage('No')">No</button>
                 <button onclick="showMessage('Yes')" id="yesButton">Yes</button>
