--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <div class="container">
         <div class="Mainprompt">
-            <img class="image" src="images/cute.jpg" alt="cat with head on hand">
-            <img class="image" src="images/kirby.jpg" alt="Description of the new image">
-            <img class="image" src="images/notfunny" alt="Description of the new image">
-            <img class="image" src="images/kissy.gif" alt="Description of the new image">
-            <img class="image" src="images/hearts.png" alt="Description of the new image">
+            <img class="image" src="images/cute.jpg" 
+            <img class="image" src="images/kirby.jpg" 
+            <img class="image" src="images/notfunny"
+            <img class="image" src="images/kissy.gif" 
+            <img class="image" src="images/hearts.png"
             <h1 class="hh" id="name">Hey handsome lovely pooki dookie bear!</h1>
             <p class="pp" id="question">You WILL be my Valentine?</p>
             <div class="buttons">
