--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <div class="container">
         <div class="Mainprompt">
-            <img class="image" src="Images/cute.jpg" 
-            <img class="image" src="Images/kirby.jpg" 
-            <img class="image" src="Images/notfunny"
-            <img class="image" src="Images/kissy.gif" 
-            <img class="image" src="Images/hearts.png"
+            <img class="image" src="Images/cute.jpg" alt="Cute Image"/>
+            <img class="image" src="Images/kirby.jpg" alt="Kirby Image"/>
+            <img class="image" src="Images/notfunny.jpg" alt="Not Funny Image"/>
+            <img class="image" src="Images/kissy.gif" alt="Kissy GIF"/>
+            <img class="image" src="Images/hearts.png" alt="Hearts Image"/>
             <h1 class="hh" id="name">Hey handsome lovely pooki dookie bear!</h1>
             <p class="pp" id="question">You WILL be my Valentine?</p>
             <div class="buttons">
