--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container">
         <div class="Mainprompt">
             <img class="image" src="Images/cute.jpg" alt="Cute Image"/>
-            <img class="image" src="Images/kirby.jpg" alt="Kirby Image"/>
-            <img class="image" src="Images/notfunny.jpg" alt="Not Funny Image"/>
+            <img class="image" src="Images/Kirby.jpg" alt="Kirby Image"/>
+            <img class="image" src="Images/Notfunny.jpg" alt="Not Funny Image"/>
             <img class="image" src="Images/kissy.gif" alt="Kissy GIF"/>
             <img class="image" src="Images/hearts.png" alt="Hearts Image"/>
             <h1 class="hh" id="name">Hey handsome lovely pooki dookie bear!</h1>
